--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
                                 </div>
 
                                 <div class="px-5 py-4 bg-gray-50 dark:bg-slate-800">
-                                    <a href="#" class="relative inline-block font-semibold tracking-wide align-middle text-base text-center border-none after:content-[''] after:absolute after:h-px after:w-0 hover:after:w-full after:end-0 hover:after:end-auto after:bottom-0 after:start-0 after:transition-all after:duration-500 text-indigo-600 dark:text-white/70 hover:text-indigo-600 dark:hover:text-white after:bg-indigo-600 dark:after:bg-white duration-500">View Tickets <i class="uil uil-ticket"></i></a>
+                                    <a href="./tickets.html" class="relative inline-block font-semibold tracking-wide align-middle text-base text-center border-none after:content-[''] after:absolute after:h-px after:w-0 hover:after:w-full after:end-0 hover:after:end-auto after:bottom-0 after:start-0 after:transition-all after:duration-500 text-indigo-600 dark:text-white/70 hover:text-indigo-600 dark:hover:text-white after:bg-indigo-600 dark:after:bg-white duration-500">View Tickets <i class="uil uil-ticket"></i></a>
                                 </div>
                             </div><!--end-->
                         </div>
