--- a/card.html
+++ b/card.html
@@ -203,8 +203,8 @@
                                     </div>
                                 </div>
                                 <div class="flex flex-col sm:flex-row gap-3 sm:gap-4 sm:justify-between mt-4">
-                                    <button class="view-details w-full bg-blue-600 sm:w-auto px-6 py-2.5 bg-gradient-to-r from-blue-500 to-blue-700 text-white rounded-lg hover:from-blue-600 hover:to-blue-800 transition-all duration-300 shadow-md hover:shadow-lg">View Details</button>
-                                    <button class="top-up w-full bg-blue-600 sm:w-auto px-6 py-2.5 bg-gradient-to-r from-green-500 to-green-700 text-white rounded-lg hover:from-green-600 hover:to-green-800 transition-all duration-300 shadow-md hover:shadow-lg">Top Up</button>
+                                    <button class="view-details w-full bg-indigo-600 sm:w-auto px-6 py-2.5 bg-gradient-to-r from-blue-500 to-blue-700 text-white rounded-lg hover:from-blue-600 hover:to-blue-800 transition-all duration-300 shadow-md hover:shadow-lg">View Details</button>
+                                    <button class="top-up w-full bg-indigo-600 sm:w-auto px-6 py-2.5 bg-gradient-to-r from-green-500 to-green-700 text-white rounded-lg hover:from-green-600 hover:to-green-800 transition-all duration-300 shadow-md hover:shadow-lg">Top Up</button>
                                 </div>
                             </div>
 
@@ -222,8 +222,8 @@
                                     </div>
                                 </div>
                                 <div class="flex flex-col sm:flex-row gap-3 sm:gap-4 sm:justify-between mt-4">
-                                    <button class="view-details w-full bg-blue-600 sm:w-auto px-6 py-2.5 bg-gradient-to-r from-blue-500 to-blue-700 text-white rounded-lg hover:from-blue-600 hover:to-blue-800 transition-all duration-300 shadow-md hover:shadow-lg">View Details</button>
-                                    <button class="top-up w-full bg-blue-600 sm:w-auto px-6 py-2.5 bg-gradient-to-r from-green-500 to-green-700 text-white rounded-lg hover:from-green-600 hover:to-green-800 transition-all duration-300 shadow-md hover:shadow-lg">Top Up</button>
+                                    <button class="view-details w-full bg-indigo-600 sm:w-auto px-6 py-2.5 bg-gradient-to-r from-blue-500 to-blue-700 text-white rounded-lg hover:from-blue-600 hover:to-blue-800 transition-all duration-300 shadow-md hover:shadow-lg">View Details</button>
+                                    <button class="top-up w-full bg-indigo-600 sm:w-auto px-6 py-2.5 bg-gradient-to-r from-green-500 to-green-700 text-white rounded-lg hover:from-green-600 hover:to-green-800 transition-all duration-300 shadow-md hover:shadow-lg">Top Up</button>
                                 </div>
                             </div>
 
@@ -283,7 +283,7 @@
             }
 
             .modal-content {
-                background-color: #e6eef4;
+                background-color: #6766cc;
                 padding: 2rem;
                 border-radius: 0.5rem;
                 max-width: 500px;
