--- a/send.html
+++ b/send.html
@@ -212,7 +212,7 @@
                                 <textarea class="w-full px-4 py-3 rounded-lg border border-gray-300 dark:border-gray-600 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition-all duration-300 resize-none dark:bg-slate-800 dark:text-white" id="note" rows="3" placeholder="Add a message"></textarea>
                             </div>
                             <div class="flex flex-col sm:flex-row justify-end space-y-2 sm:space-y-0 sm:space-x-2">
-                                <button type="submit" class="px-8 py-3 bg-blue-600 hover:bg-blue-700 text-white font-medium rounded-lg transform transition-all duration-300 hover:-translate-y-0.5 hover:shadow-lg">Send Money</button>
+                                <button type="submit" class="px-8 py-3 bg-indigo-600 hover:bg-blue-700 text-white font-medium rounded-lg transform transition-all duration-300 hover:-translate-y-0.5 hover:shadow-lg">Send Money</button>
                                 <a href="./index.html" class="px-8 py-3 bg-gradient-to-r from-gray-600 to-gray-700 hover:from-gray-700 hover:to-gray-600 text-white font-medium rounded-lg transform transition-all duration-300 hover:-translate-y-0.5 hover:shadow-lg text-center">Cancel</a>
                             </div>
                         </form>
