--- a/tickets.html
+++ b/tickets.html
@@ -234,7 +234,7 @@
                                 </div>
                             </div>
             
-                            <button type="submit" class="w-full bg-blue-600 py-4 md:py-5 bg-gradient-to-r from-blue-500 to-blue-600 text-white rounded-lg text-base md:text-lg font-bold cursor-pointer transition-all duration-300 hover:from-blue-600 hover:to-blue-500 hover:-translate-y-1 hover:shadow-xl uppercase tracking-wider transform hover:scale-[1.02]">Submit Ticket</button>
+                            <button type="submit" class="w-full bg-indigo-600 py-4 md:py-5 bg-gradient-to-r from-blue-500 to-blue-600 text-white rounded-lg text-base md:text-lg font-bold cursor-pointer transition-all duration-300 hover:from-blue-600 hover:to-blue-500 hover:-translate-y-1 hover:shadow-xl uppercase tracking-wider transform hover:scale-[1.02]">Submit Ticket</button>
                         </form>
                     </section>
                 </div><!--end container-->
