--- a/transactions.html
+++ b/transactions.html
@@ -201,7 +201,7 @@
                                 <option value="expense">Expenses</option>
                             </select>
                             <input type="date" id="dateFilter" class="p-3 border border-gray-300 rounded-lg text-base focus:ring-2 focus:ring-indigo-500 focus:border-indigo-500 transition-all duration-300">
-                            <button onclick="applyFilters()" class="p-3 bg-[#3498db] text-black border-none rounded-lg cursor-pointer hover:bg-[#2980b9] transition-all duration-300 transform hover:scale-105 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-[#3498db]">Apply Filters</button>
+                            <button onclick="applyFilters()" class="p-3 bg-indigo-600 text-white border-none rounded-lg cursor-pointer hover:bg-[#2980b9] transition-all duration-300 transform hover:scale-105 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-[#3498db]">Apply Filters</button>
                         </div>
 
                         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 md:gap-6 mt-8">
