--- a/wallet.html
+++ b/wallet.html
@@ -229,7 +229,7 @@
                                     <input type="text" id="description" placeholder="Description" 
                                         class="p-3 border-2 border-gray-200 dark:border-gray-700 rounded-lg w-full transition duration-300 focus:outline-none focus:border-blue-500 focus:ring-2 focus:ring-blue-200 dark:bg-slate-700 dark:text-white hover:border-blue-400">
                                     <button onclick="addTransaction()" 
-                                        class="w-full md:w-auto px-8 py-4 bg-blue-600 text-white font-semibold rounded-full hover:bg-blue-800 hover:translate-y-[-2px] hover:shadow-lg transition-all duration-300 tracking-wide transform hover:scale-105">
+                                        class="w-full md:w-auto px-8 py-4 bg-indigo-600 text-white font-semibold rounded-full hover:bg-blue-800 hover:translate-y-[-2px] hover:shadow-lg transition-all duration-300 tracking-wide transform hover:scale-105">
                                         Submit
                                     </button>
                                 </div>
@@ -241,7 +241,8 @@
                             </div>
                         </div>
                     </div>
-                </div><!--end container-->
+                </div>
+                <!--end container-->
 
                 <!-- Footer Start -->
                 <footer class="shadow dark:shadow-gray-700 bg-white dark:bg-slate-900 px-6 py-4 mt-auto">
@@ -252,7 +253,8 @@
                             </div><!--end col-->
                         </div><!--end grid-->
                     </div><!--end container-->
-                </footer><!--end footer-->                <!-- End -->
+                </footer><!--end footer-->
+               <!-- End -->
             </main>
             <!--End page-content" -->
         </div>
