--- a/compliance.html
+++ b/compliance.html
@@ -66,7 +66,7 @@
                         <label for="message" class="block mb-2 text-slate-700 font-semibold">Message:</label>
                         <textarea id="message" name="message" required class="w-full px-3 py-3 border border-gray-300 rounded-md text-base transition-colors duration-300 focus:outline-none focus:border-blue-500 focus:ring-2 focus:ring-blue-200"></textarea>
                     </div>
-                    <button type="submit" class="bg-slate-700 text-white px-6 py-3 rounded-md text-base transition-colors duration-300 hover:bg-slate-800">Submit</button>
+                    <button type="submit" class="bg-indigo-600 text-white px-6 py-3 rounded-md text-base transition-colors duration-300 hover:bg-slate-800">Submit</button>
                 </form>
             </div>
         </div>
