--- a/deposit.html
+++ b/deposit.html
@@ -190,7 +190,7 @@
                             </form>
                             <div class="mt-6">
                                 <a href="./index.html" 
-                                   class="block w-full text-center bg-gray-200 dark:bg-slate-700 text-gray-700 dark:text-gray-200 py-3 px-4 rounded-lg hover:bg-gray-300 dark:hover:bg-slate-600 transform transition-all active:scale-95 font-medium">
+                                   class="block w-full text-center bg-indigo-600 dark:bg-slate-700 text-white dark:text-gray-200 py-3 px-4 rounded-lg hover:bg-gray-300 dark:hover:bg-slate-600 transform transition-all active:scale-95 font-medium">
                                     Back to Dashboard
                                 </a>
                             </div>
