--- a/withdraw.html
+++ b/withdraw.html
@@ -162,7 +162,7 @@
                                         <label for="accountNumber" class="block text-sm font-medium mb-2">Account Number</label>
                                         <input type="text" id="accountNumber" class="block w-full pl-3 pr-10 py-3 border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition-all" required pattern="[0-9]{8,17}" placeholder="Enter account number">
                                     </div>
-                                    <button type="submit" class="w-full bg-blue-600 hover:bg-blue-700 text-white font-bold py-4 px-4 rounded-lg text-lg transition-all transform hover:translate-y-[-2px]">
+                                    <button type="submit" class="w-full bg-indigo-600 hover:bg-blue-700 text-white font-bold py-4 px-4 rounded-lg text-lg transition-all transform hover:translate-y-[-2px]">
                                         Withdraw
                                     </button>
                                 </form>
