--- a/withdrawal-settings.html
+++ b/withdrawal-settings.html
@@ -277,7 +277,7 @@
                                         </div>
                                     </div>
                 
-                                    <button type="submit" class="w-full bg-blue-600 text-white py-4 rounded-lg hover:bg-blue-700 transform hover:scale-[1.02] transition-all duration-300 font-semibold text-lg shadow-lg hover:shadow-xl">Save Settings</button>
+                                    <button type="submit" class="w-full bg-indigo-600 text-white py-4 rounded-lg hover:bg-blue-700 transform hover:scale-[1.02] transition-all duration-300 font-semibold text-lg shadow-lg hover:shadow-xl">Save Settings</button>
                                 </form>
                             </div>
                         </div>
